fix(http-semantic-utils): normalize malformed urls (#379)
Co-authored-by: surajpuvvada <45047893+surajpuvvada@users.noreply.github.com>